<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnThoat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/darkBlue_dra"
        android:text="@string/thoat"
        android:textSize="16sp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_maSo"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/nhap_ma"
        android:textSize="20sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_hoTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ho_ten"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/et_maSo" />

    <RadioGroup
        android:id="@+id/rg_gioiTinh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_hoTen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gioi_tinh"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_nam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/nam"

            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_nu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nu"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_donVi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_gioiTinh">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_vi"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/sp_donVi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@color/grey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_layout" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_chooseImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chon_anh"
        android:textSize="16sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_donVi" />

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@color/grey"
        android:contentDescription="@string/anh_nhan_vien"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_hoTen" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_layout1"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"



        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_chooseImg">


        <LinearLayout
            android:id="@+id/layout_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/btnRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/darkBlue_dra"
                android:text="@string/doc_du_lieu"
                android:textSize="12dp"/>

            <Button
                android:id="@+id/btnWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/darkBlue_dra"
                android:text="@string/ghi_du_lieu"
                android:textSize="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"


            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_btn1">

            <Button
                android:id="@+id/btnThem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/darkBlue_dra"
                android:text="@string/them"
                android:textSize="12dp"/>

            <Button
                android:id="@+id/btnSua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/darkBlue_dra"
                android:text="@string/sua"
                android:textSize="12dp"/>

            <Button
                android:id="@+id/btnXoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/darkBlue_dra"
                android:text="@string/xoa"
                android:textSize="12dp"/>

            <Button
                android:id="@+id/btnLamMoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/darkBlue_dra"
                android:text="@string/lam_moi"
                android:textSize="12dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginTop="4dp"

        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/btn_layout1">

        <ListView
            android:id="@+id/lv_nhanVien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:listSelector="@color/grey">

        </ListView>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>